--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,29 @@
 
     </dependencies>
 
+    <profiles>
+        <profile>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <id>css</id>
+            <properties>
+                <element.selector>css-selector</element.selector>
+            </properties>
+        </profile>
+        <profile>
+            <id>simple</id>
+            <properties>
+                <element.selector>simple-selector</element.selector>
+            </properties>
+        </profile>
+        <profile>
+            <id>xpath</id>
+            <properties>
+                <element.selector>xpath-selector</element.selector>
+            </properties>
+        </profile>
+    </profiles>
+
 
 </project>
